- Links to available feeds are now displayed at the bottom of HTML pages
Features:
- new "websearch" command which default to wiby.me
- new "share" command to send a page by email
- "cookies" command and http cookies are now supported in netcache (by Urja)
- "set default_cmd" now allows to configure what happen on empty lines
Others:
- In "lists", only consider files ending with .gmi (bug #46 by woffs)
- support for new links color in gopher (by JMCS)
- fix an off by one bug in "cp url XX" 
- Ansicat: Fix incorrectly identifying RSS feeds as XHTML when there was no entry
- Fix sync hanging on gopher interactive prompt (by JMCS)
- Fix crash when trying to parse HTML without BS4 (reported by Hoël Bézier)
- Automatically replace space by %20 in img url in HTML
- Ansicat: HTML Render img with data-src if src doesn’t link to a valid image
- Opnk: fix a crash when trying to cache-clean uncached url (such as images)

## 2.8 - November 13th 2025
- New option "images_size" to use with "set" (idea by aelius)
- Automatically use newly created certificates in Gemini (by JMCS)
- Fix a rare crash when listing urls in a non-existant page
- ansicat: Trying to get render preformatted text correctly in HTML
- ansicat: html <code> should be inline, not a separate block like <pre>
- ansicat: <abbr> is rendered as <code>
- fix "up" not working correctly on gopher (thanks JMCS)
- gopher: implement support for item type 7 (by JMCS)
- fix out of range index on page without links (by Alexander W. Jans)
- User-agent now includes URL to avoid blocking (suggested by cks)
- Adding gemtext rendering to message/rfc822 files 
- ansicat: support for <base> in html rendering
- gopher: consider .xml files as feeds (by JMCS)
- gopher: detect image types in gopher to open them internally (by JMCS)
- "reload" now delete cached rendering, online and offline
- ansicat: remove soft-hyphens when rendering any content

## 2.7.1 - April 9th 2025 - The "2.7 was not (completely) a joke" release